<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PlayerActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/back"
            android:background="@android:color/transparent"
            android:layout_margin="5dp"
            app:tint="@color/black"
            android:contentDescription="@string/back_btn"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/world_of_music"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />
        <ImageButton
            android:id="@+id/btnFav"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/favorite_empty"
            android:background="@android:color/transparent"
            android:layout_margin="15dp"
            app:tint="@android:color/holo_red_dark"
            android:contentDescription="@string/favourites_btn"/>
    </LinearLayout>
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgSong"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:src="@drawable/music_player"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/cool_blue"
        app:strokeWidth="5dp"/>

    <TextView
        android:id="@+id/tvSongName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_weight="1"
        android:ellipsize="end"
        android:singleLine="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_weight="1">
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fbtnPre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_previous"
            app:iconSize="40dp"
            android:contentDescription="@string/previous_btn"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fbtnPausePlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/pause"
            app:iconSize="50dp"
            android:layout_marginHorizontal="25dp"
            app:shapeAppearanceOverlay="@style/curved"
            android:backgroundTint="@android:color/holo_red_light"
            app:iconTint="@color/white"
            android:contentDescription="@string/play_pause_btn"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fbtnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_next"
            app:iconSize="40dp"
            android:contentDescription="@string/next_btn"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/tvStartTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/start_tv"/>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />
        <TextView
            android:id="@+id/tvEndTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/end_tv"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/btnRepeat"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_repeat"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/repeat_btn"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/btnEqualizer"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_equalizer"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/equalizer_btn"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/btnTimer"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_timer"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/timer_btn"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/btnShare"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_share"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/share_btn"
            android:layout_weight="1"/>
    </LinearLayout>
  </LinearLayout>