<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PlaylistDetails">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/cool_pink">
    <ImageButton
        android:id="@+id/btnBackPD"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/back"
        android:background="@android:color/transparent"
        android:layout_margin="5dp"
        app:tint="@color/white"
        android:contentDescription="@string/back_btn"/>
    <TextView
        android:id="@+id/tvPlaylistNamePD"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/playlist_details"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_weight="1"
        android:singleLine="true"/>
        <ImageButton
            android:id="@+id/btnRemoveAllPD"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_remove_all"
            android:background="@android:color/transparent"
            android:layout_margin="15dp"
            app:tint="@android:color/white"
            android:contentDescription="@string/remove_all"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayoutDetails"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgPlaylistPD"
            android:layout_width="0dp"
            android:scaleType="centerCrop"
            android:background="@color/cool_pink"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:src="@drawable/splash_screen"/>
        <TextView
            android:id="@+id/tvMoreInfoPD"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/playlist_name"
            android:gravity="center|start"
            android:layout_marginHorizontal="5dp"
            android:textColor="#FCFFFFFF"
            android:textSize="16sp"
            android:layout_weight="1"
            android:background="@color/cool_pink"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlaylistDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutDetails"
        android:scrollbarThumbVertical="@drawable/ic_scroll_bar"
        android:scrollbars="vertical"
        android:paddingBottom="40dp"
        android:layout_marginTop="10dp"/>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fbtnShufflePD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:icon="@drawable/ic_shuffle"
        app:iconSize="35dp"
        app:iconTint="@color/cool_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:strokeWidth="2dp"
        app:strokeColor="@color/cool_pink"
        android:contentDescription="@string/playlist_btn"
        android:visibility="invisible"/>
    <LinearLayout
        android:id="@+id/llRemovePD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddSongPD"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableTop="@drawable/ic_add"
            android:drawableTint="@color/cool_pink"
            android:text="@string/add_song"
            android:textColor="@color/black"
            android:textAllCaps="false"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>