<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SelectionActivity">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_margin="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <ImageButton
        android:id="@+id/btnBackSE"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/back"
        android:background="@android:color/transparent"
        android:layout_margin="5dp"
        app:tint="@color/black"
        android:contentDescription="@string/back_btn"/>
        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_viewSE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:queryHint="@string/search_song"
            app:iconifiedByDefault="false"
            android:focusable="false"
            android:layout_margin="5dp"
            app:queryBackground="@android:color/transparent"
            android:background="@drawable/custom_search_view"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:scrollbarThumbVertical="@drawable/ic_scroll_bar"
        android:scrollbars="vertical"
        android:paddingBottom="40dp"
        android:layout_marginTop="10dp"/>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fbtnAddSE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:icon="@drawable/ic_check"
        app:iconSize="35dp"
        app:iconTint="@color/cool_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:strokeWidth="2dp"
        app:strokeColor="@color/cool_pink"
        android:contentDescription="@string/add_song"
        android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>